--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ body{
     width: 100%;
 }
 .top-banner{
-    border: 1px solid rgba(67, 236, 132, 0.664);
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
 section{
     height: 500px;
+    padding-bottom: 150px;
 }
 .link-button{
     text-decoration: none;
@@ -40,7 +40,6 @@ section{
     font-weight: 700;
 }
 .Dream-To-Be{
-    border: 1px solid rgba(37, 97, 226, 0.664);
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
@@ -48,16 +47,76 @@ section{
 }
 .Experience{
     background-image: url(images/exp-bg.png);
- background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    background-position:left center;
 
 }
 .Single-Experience{
  box-shadow: 10px 10px 40px  dimgray;
- border-radius: 5px;
+ border-radius: 0px 30px 30px 0px;
  height: 80%;
- 
+ background-color: cornsilk;
 }
 #full-stack{
-    border-left: 7px solid blue;
-    border-image:linear-gradient( 180deg, lightSalmon , Tomato );
+    border-left: 7px solid;
+    border-image:linear-gradient(180deg, rgba(255, 160, 122, 0.911) , rgb(248, 73, 43) );
     border-image-slice: 1;
+}
+#Baby-Dev{
+    border-left: 7px solid;
+    border-image:linear-gradient(180deg, rgba(0, 60, 255, 0.911) , rgba(0, 255, 255, 0.822) );
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+    color: black;
+    font-family: monospace;
+    font-size: 16px;
+}
+.exp{
+    padding-left: 5%;
+}
+
+/*----Social Link----*/
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  .fa-linkedin {
+    background: #007bb5;
+    color: white;
+  }
+  
+  .fa-youtube {
+    background: #bb0000;
+    color: white;
+  }
+  
+  .fa-instagram {
+    background: #125688;
+    color: white;
+  }
+  
+  .fa-pinterest {
+    background: #cb2027;
+    color: white;
+  }
